# virtual-surround-manager

./: CMakeLists.txt
po/de/: virtual-surround-manager.po
po/fr/: virtual-surround-manager.po
src/: frontend_manager.cpp  frontend_manager.h  main.cpp  tray_icon.cpp  tray_icon.h
src/qml/: CMakeLists.txt  Main.qml  Settings.qml
